syntax = "proto3";

option csharp_namespace = "TinderAPI";

service CreateProfileService {
  rpc CreateProfile (CreateProfileRequest) returns (CreateProfileResponse);
}

message CreateProfileRequest {
  string id = 1;
  string email = 2;
  string first_name = 3;
  string last_name = 4;
  bool is_verified = 5;
  bool is_male = 6;
  string birthday = 7;
  float latitude = 8;
  float longitude = 9;
}

message CreateProfileResponse {
  bool success = 1;
  string profile_id = 2;
  string error_message = 3;
}